--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
 
 
-     <!-- Publications -->
+     <!-- Publications ---------------------------------------------------------------------------------------------------------->
      <br><br><br>
 <center><h1>Publications</h1></center>
      <section id="publications" data-stellar-background-ratio="0.5">
@@ -602,6 +602,150 @@
           </div>
      </section>
 
+
+
+
+
+
+
+
+
+
+
+
+<!-- Presentations ---------------------------------------------------------------------------------------------------------->
+<br><br><br>
+<center><h1>Presentations</h1></center>
+
+     <section id="presentations" data-stellar-background-ratio="0.5">
+          <div class="container">
+               <div class="row">
+                    <div class="container-fluid">
+
+                    <h3>Refereed conference presentations</h3>
+
+                    <p>Bednall, James, Peter Salmon, Godfrey Simpson and Rosie Sitorus. 2021. Across cultures, across disciplines: Developing a model for working in the “in between”. 
+                         Artlands 2021. 1-3 September 2021, Junction Arts Festival, Launceston, Australia.</p>
+
+                    <p>Bednall, James, Jacqui Cook, Roderick MacKay, Godfrey Simpson and Rosie Sitorus. 2021. Ngalimi bidagu yan.guwa furnace-di ‘From the quiet, into The Furnace’: 
+                         Translating a sleeping language for a feature film. 7th International Conference on Language Documentation and Conservation. 4 March 2021, University of Hawai‘i 
+                         at Mānoa. <a href="https://www.youtube.com/watch?v=IMB8SwxPHlo" target="_blank">Access here</a>.</p>
+
+                    <p>Bednall, James. 2020. Aspectual and discourse-emphatic properties of stylised prosodic lengthening in Anindilyakwa. 51st Annual Conference of the Australian 
+                         Linguistic Society. 14-15 December 2020, Online Conference, Australia.</p>
+
+                    <p>Bednall, James. 2019. Variable use of case marking to indicate grammatical relations in Anindilyakwa. Grammatical Relations in Australian Languages workshop 
+                         (organised by T Ennever & M Browne). 50th Annual Conference of the Australian Linguistic Society. 11-13 December 2019, Macquarie University, Sydney, Australia.</p>
+
+                    <p>Ponsonnet, Maïa, Bednall, James and Isobel O’Keeffe. 2019. The respective roles of culture and grammar in shaping emotion metaphors: The case of the Gunwinyguan 
+                         family. Minority Languages & Cognitive Linguistics workshop (organised by S Devylder, A Gaby & J Schlossberg). 15th International Cognitive Linguistics Conference 
+                         (ICLC-15). 6-11 August 2019, Kwansei Gakuin University, Nishinomiya, Japan.</p>
+
+                    <p>Caudal, Patrick, Robert Mailhammer and Bednall, James. 2019. A comparative account of the Iwaidja and Anindilyakwa modal systems. 18th Australian Languages Workshop. 
+                         15-17 March 2019, University of Melbourne, Marysville, Australia.</p>
+
+                    <p>Bednall, James. 2018. Durative and relational temporal adverbials, event structure aspect and temporal reference in Anindilyakwa. 49th Annual Conference of the 
+                         Australian Linguistic Society. 10-12 December 2018, University of Adelaide, Australia.</p>
+
+                    <p>Bednall, James. 2018. Temporal and aspectual expression in Anindilyakwa: Phonologically overt vs. zero-marked inflectional T/A. Colloque Chronos 13. 4-6 June 2018, 
+                         Université de Neuchâtel, Switzerland.</p>
+
+                    <p>Caudal, Patrick and James Bednall. 2018. Composite TA-M marking in non-Pama-Nyungan languages: Evidence for a constructional approach to the tense-aspect/modality 
+                         interaction. Colloque Chronos 13. 4-6 June 2018, Université de Neuchâtel, Switzerland.</p>
+
+                    <p>Bednall, James. 2018. Expressing imperatives in Anindilyakwa (Australia): imperative.hortative vs. irrealis portmanteaux pronominal marking. Poster presentation at 
+                    Non-Canonical Imperatives Workshop. 25-26 May 2018, Humboldt Universität zu Berlin, Germany.</p>
+
+                    <p>Bednall, James. 2017. Body parts and emotions in Anindilyakwa. Emotion metaphors in Australian languages: The role of the body workshop (organised by M Ponsonnet) at 
+                         the 48th Annual Conference of the Australian Linguistic Society. 4-7 December 2017, University of Sydney, Australia.</p>
+
+                    <p>Caudal, Patrick and James Bednall. 2017. Complex TAM marking in a selection of non-Pama-Nyungan languages. TAM marking in languages of Australia and the Pacific 
+                         workshop (organised by J Bednall, P Caudal & A Krajinović) at the 48th Annual Conference of the Australian Linguistic Society. 4-7 December 2017, University of Sydney, 
+                         Australia.</p>
+
+                    <p>Bednall, James. 2017. Expressing viewpoint aspect in Anindilyakwa: Inflectional and non-inflectional strategies. 16th Australian Languages Workshop. 3-5 March 2017, 
+                         University of Melbourne, Marysville, Australia.</p>
+
+                    <p>Caudal, Patrick and James Bednall. 2016. Polyfunctionality vs. compositionality and the tense/aspect-modality divide: Descriptive, comparative and theoretical 
+                    issues. TAM-E Conference. 17-18 November 2016, Université Paris Diderot–Paris 7, France.</p>
+
+                    <p>Bednall, James and Patrick Caudal. 2016. The tense/aspect(-modality) system of Anindilyakwa: A reanalysis. 8th European Australianist Workshop. 24-25 September 
+                         2016, SOAS, London, UK.</p>
+
+                    <p>Bednall, James. 2016. Aspectual expression in Anindilyakwa narratives. 15th Australian Languages Workshop. 4-6 March 2016, Australian National University, Kioloa 
+                         Campus, Australia.</p>
+
+                    <p>Bednall, James and Rosie Sitorus. 2014. With many roles come many responsibilities: Language centres and the implementation of school and community-based language 
+                         programs. 45th Annual Conference of the Australian Linguistic Society. 10-12 December 2014, University of Newcastle, Australia.</p>
+
+                    <p>Bednall, James. 2014. You two sat standing: Expressing imperfectivity in Badimaya. The Young Linguists’ International Conference. 28 June 2014, Stockholm University, 
+                         Sweden.</p>
+
+                    <p>Bednall, James. 2013. Lexical, morphological and syntactic variation in Badimaya: An examination of two Badimaya varieties. 44th Annual Conference of the Australian 
+                         Linguistic Society. 1-4 October 2013, University of Melbourne, Australia.</p>
+
+                    <p>Bednall, James, Jennifer Kniveton, Leonie Boddington and Edie Maher. 2013. Collaboration and engagement between language programs and the community: Discussions 
+                    from the Midwest, WA. Western and Northern Aboriginal Language Alliance (WANALA) Conference. 25-27 June 2013, Edith Cowan University, Australia.</p>
+
+                    <p>Bednall, James. 2012. Modal and aspectual functions of the imperfective morpheme -ma across the Western Desert language. The verbal systems in Australian languages 
+                         workshop (organised by P Caudal) at the 43rd Annual Conference of the Australian Linguistic Society. 5-7 December 2012, University of Western Australia, Australia.</p>
+
+                    <p>Bednall, James. 2012. Changing opinions or persisting ideologies: Attitudes to Aboriginal languages by non-Indigenous Australians. 37th Annual Conference of the Applied 
+                         Linguistic Association of Australia (ALAA). 12-14 November 2012, Curtin University, Australia.</p>
+
+                    <h3>Invited talks</h3>
+
+                    <p>Bednall, James, Jacqui Cook, Roderick MacKay, Godfrey Simpson and Rosie Sitorus. 2020. Ngalimi bidagu yan.guwa furnace-di ‘From the quiet, into The Furnace’: 
+                         Translating a sleeping language for a feature film. UWA Linguistics Seminar. 29 May 2020, University of Western Australia, Australia.</p>
+
+                    <p>Bednall, James. 2018. Temporal reference and categorisation: Perspectives from Anindilyakwa. Understanding the Deep Past across Language and Culture Symposium. 27-28 
+                         September 2018, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2018. Composite TAM marking in Anindilyakwa (Australia). Seminar Series. 29 May 2018, Humboldt-Universität zu Berlin, Germany.</p>
+
+                    <p>Bednall, James. 2018. Aspectuo-temporal underspecification and composite modal marking in Anindilyakwa (Gunwinyguan, Australia). FunC Group Seminar Series. 20 April 
+                         2018, Katholieke Universiteit Leuven, Belgium.</p>
+
+                    <p>Bednall, James. 2013. Fading voices: Local and global perspectives on language endangerment and the erosion of linguistic diversity. Public Lecture Series. 20, 21 
+                         November 2013, Western Australian Museum - Geraldton, Australia.</p>
+
+                    <p>Bednall, James. 2013. Fading voices: Local and global perspectives on language endangerment and the erosion of linguistic diversity. Public Lecture Series. 20, 21 
+                         November 2013, Western Australian Museum - Geraldton, Australia.</p>
+
+                    <h3>Departmental seminars and other presentations</h3>
+
+                    <p>Bednall, James. 2020. Temporal, aspectual and modal inflectional marking in Anindilyakwa. Thesis Defence. 13 February 2020, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2019. Temporal and modal properties of complex clauses in Anindilyakwa. CoEDL Seminar. 25 January 2019, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2018. Imperatives and deontic modality in Anindilyakwa. Poster presentation at CoEDL-fest (the Annual Meeting of the Centre of Excellence for the 
+                         Dynamics of Language). 5-9 February 2018, University of Melbourne, Australia.</p>
+
+                    <p>Bednall, James. 2018. Fieldwork and Australian languages. National Youth Science Forum. 10 January 2018, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2017. Mood marking and modality in Anindilyakwa. CoEDL Seminar. 1 September 2017, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2017. Anindilyakwa Corpus Development. CoEDL Corpus Workshop. 2-4 May 2017, University of Melbourne, Australia.</p>
+
+                    <p>Bednall, James. 2017. Polyfunctionality of the irrealis in Anindilyakwa. Poster presentation at CoEDL-fest (the Annual Meeting of the Centre of Excellence for the 
+                         Dynamics of Language). 5-9 February 2017, University of Queensland, Australia.</p>
+
+                    <p>Bednall, James and Patrick Caudal. 2016. Inflectional tense/aspect-modality marking in Anindilyakwa, and other Australian languages. LingLunch Seminar. 27 October 
+                         2016, Université Paris Diderot-Paris 7, France.</p>
+
+                    <p>Bednall, James. 2016. The Anindilyakwa Corpus Project. CoEDL Corpus-building Workshop. 18-19 April 2016, University of Melbourne, Australia.</p>
+
+                    <p>Bednall, James. 2015. Temporal, aspectual and modal expression in Anindilyakwa, a non-Pama-Nyungan language of Groote Eylandt, Australia. Thesis Proposal Seminar. 
+                         30 November 2015, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2012. Derivational morphology in Yinhawangka. School of Language Studies Seminar. 23 January 2012, Australian National University, Australia.</p>
+
+                    <p>Bednall, James. 2011. The semantics of mood across the Western Desert language. UWA Linguistics Seminar. 7 October 2011, University of Western Australia, Australia.</p>
+
+                    </div>
+               </div>
+          </div>
+     </section>
 
 
 
