--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -86,13 +86,13 @@
 
           <div class="row">
               
-               <div class="col-md-6 col-sm-12">
-                    <p style="text-align: left;">Anindilyakwa is a Gunwinyguan language spoken in eastern Arnhem Land (Northern Territory), 
+                    <p>Anindilyakwa is a Gunwinyguan language spoken in eastern Arnhem Land (Northern Territory), 
                          on the Groote Eylandt archipelago (43 kms east of the Arnhem Land coast). It is a vibrant language, being one of the 
                          few Australian languages still being acquired by children, and spoken by over 1,600 people (Marmion et al. 2014: 16).</p>
-                    <div class="project-image20"></div>
-                    <p><h6>Anindilyakwa and surrounding languages (Harvey 2008)</h6></p>
-               </div>
+                    <center><div class="project-image20"></div>
+                    <p><h6>Anindilyakwa and surrounding languages (Harvey 2008)</h6></p></center>
+                    <br>
+               
           </div>
 
           <div class="row">
