--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="container-fluid">
                          <!-- <h2>Minimal Design</h2> -->
                          <p>I am a lecturer in linguistics at <a href="https://www.batchelor.edu.au/students/courses/higher-education-courses/he-languages-and-linguistics/" target="_blank">
-                              Batchelor Institute of Indigenous Tertiary Education (BIITE)</a>, a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
+                              Batchelor Institute of Indigenous Tertiary Education</a> (BIITE), a visiting fellow at the <a href="https://researchers.anu.edu.au/researchers/bednall-j" target="_blank">Australian National 
                               University</a> and a research affiliate with the ARC Centre of Excellence for the Dynamics of Language (<a href="http://www.dynamicsoflanguage.edu.au/team/alumni/" 
                               target="_blank">CoEDL</a>).</p>
 
@@ -234,7 +234,7 @@
                               </div>
 
                              <div class="pricing-bottom">
-                              <a href="#" class="section-btn pricing-btn">Anindilyakwa</a>
+                              <a href="/anindilyakwa.html" class="section-btn pricing-btn">Anindilyakwa</a>
                              </div>
 
                          </div>
@@ -542,7 +542,7 @@
                          <h3>Refereed journal articles</h3>
                          
                          <p><strong>Bednall, James</strong>. 2021. <a href="https://www.mdpi.com/2226-471X/6/4/164" target="_blank">Identifying salient Aktionsart properties in Anindilyakwa.</a> <i>Languages</i> 6(4), 164. 
-                              <a href="https://www.mdpi.com/2226-471X/6/4/164/pdf" target="_blank">pdf.</a></p>
+                              <a href="https://www.mdpi.com/2226-471X/6/4/164/pdf" target="_blank">download pdf.</a></p>
                          <br>
                          <p><strong>Bednall, James</strong>. 2020. <a href="https://www.jbe-platform.com/content/journals/10.1075/pc.00013.bed" target="_blank">Feeling through your chest: 
                               Body-based tropes for emotion in Anindilyakwa</a>. <i>Pragmatics and Cognition</i> 27(1), 
@@ -574,7 +574,7 @@
                          <p><strong>Bednall, James</strong>. 2020. <a href="https://openresearch-repository.anu.edu.au/handle/1885/167214 ">Temporal, aspectual and modal expression in 
                               Anindilyakwa, the language of the Groote Eylandt archipelago, Australia.</a> 
                               PhD thesis, Australian National University & Université de Paris. 615 pages. 
-                              <a href="https://openresearch-repository.anu.edu.au/bitstream/1885/167214/4/Bednall-Thesis-Updated.pdf" target="_blank">pdf.</a></p>
+                              <a href="https://openresearch-repository.anu.edu.au/bitstream/1885/167214/4/Bednall-Thesis-Updated.pdf" target="_blank">download pdf.</a></p>
                          <br>
                          <p><strong>Bednall, James</strong>. 2011. The semantics of mood across the Western Desert language. Honours thesis, University of Western Australia. 
                               71 pages.</p>
@@ -612,11 +612,11 @@
                          
                          <p><strong>Bednall, James</strong> (collector). 2016-2019. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank"><i>Anindilyakwa language 
                               documentation</i></a>. [JRB1]. Digital collection managed by 
-                              PARADISEC. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Access here.</a></p>
+                              PARADISEC.</p>
                          <br>
                          <p><strong>Bednall, James</strong> (collector). 2012-2014. <a href="http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf" 
                               target="_blank"><i>Badimaya language recordings, 2012-2014</a></i>. [IRRA- WANGGA_08]. (64 audio files; 44 hrs). Digital 
-                              collection managed by AIATSIS. <a href="http://aiatsis.gov.au/sites/default/files/catalogue_resources/irra-wangga_08_interim_finding_aid_1.pdf" target="_blank">Access here.</a></p>
+                              collection managed by AIATSIS.</p>
                          <br>      
 
                     </div>
@@ -727,7 +727,7 @@
                          Sweden.</p>
                     <br>
 
-                    <p><strong>Bednall, James</strong>. 2013. Lexical, morphological and syntactic variation in Badimaya: An examination of two Badimaya varieties. </i>44th Annual Conference of the Australian 
+                    <p><strong>Bednall, James</strong>. 2013. Lexical, morphological and syntactic variation in Badimaya: An examination of two Badimaya varieties. <i>44th Annual Conference of the Australian 
                          Linguistic Society</i>. 1-4 October 2013, University of Melbourne, Australia.</p>
                     <br>
 
