--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -111,35 +111,48 @@
                               <li>Capell, Arthur. 1942. Languages of Arnhem Land, North Australia. Oceania, 12, 4, 364–392. JSTOR 40327959.</li>
                               <li>Moody, Mary L.A. 1954. <i>A descriptive statement of the phonemics and morphology of Anindilyaugwa, the language 
                                    of Groote Eylandt, Northern Territory</i>. MA thesis, University of Sydney.</li>
-                              <li>Worsley, Peter M. 1954. <i>The changing social structure of the Warnindiljaugwa</i>. PhD thesis, Australian National 
-                                   University, Canberra. <a href="http://hdl.handle.net/1885/116807" target="_blank">http://hdl.handle.net/1885/116807</a></li>
+
+                              <li>Worsley, Peter M. 1954. <a href="http://hdl.handle.net/1885/116807" target="_blank"><i>The changing social structure of the Warnindiljaugwa</i></a>. PhD thesis, Australian National 
+                                   University, Canberra.</li>
+
                               <li>Heath, Jeffrey. n.d. <i>Draft Grammatical Sketch of Anindhilyagwa (Groote Eylandt, Australia)</i>. Canberra: AIATSIS.</li>
-                              <li>Stokes, Judith. 1981. Anindilyakwa phonology from phoneme to syllable. In Barbara Waters (ed.) <i>Work Papers of SIL-AAB Series 
-                                   A volume 5. Australian Phonologies: Collected Papers</i> (pp. 139–81). Darwin: SIL. <a href="www.ausil.org.au/sites/ausil/files/WP-A-5%20Abubduktajwa%20Phonology_0.pdf" target="_blank">www.ausil.org.au/sites/ausil/files/WP-A-5%20Abubduktajwa%20Phonology_0.pdf</a></li>
-                              <li>Stokes, Judith. 1982. A Description of the Mathematical Concepts of Groote Eylandt Aborigines. In Susan Hargrave 
-                                   (ed.) <i>Work Papers of SIL-AAB Series B volume 8. Language and Culture</i> (pp. 33–152). Darwin: SIL. 
-                              <a href="http://www.ausil.org.au/sites/ausil/files/WP-B-8%20Groote%20Maths%20concepts_0.pdf" target="_blank">www.ausil.org.au/sites/ausil/files/WP-B-8%20Groote%20Maths%20concepts_0.pdf</a></li>
+                              
+                              <li>Stokes, Judith. 1981. <a href="www.ausil.org.au/sites/ausil/files/WP-A-5%20Abubduktajwa%20Phonology_0.pdf" target="_blank">Anindilyakwa 
+                                   phonology from phoneme to syllable</a>. In Barbara Waters (ed.) <i>Work Papers of SIL-AAB Series 
+                                   A volume 5. Australian Phonologies: Collected Papers</i> (pp. 139–81). Darwin: SIL.</li>
+
+                              <li>Stokes, Judith. 1982. <a href="http://www.ausil.org.au/sites/ausil/files/WP-B-8%20Groote%20Maths%20concepts_0.pdf" target="_blank">A Description of the 
+                                   Mathematical Concepts of Groote Eylandt Aborigines.</a> In Susan Hargrave (ed.) <i>Work Papers of SIL-AAB Series B volume 8. Language and Culture</i> 
+                                   (pp. 33–152). Darwin: SIL. </li>
+
                               <li>Waddy, Julie Anne. 1984. <i>Classification of plants and animals from a Groote Eylandt Aboriginal point of view</i>. PhD thesis, 
                                    Macquarie University.</li>
-                              <li>Waddy, Julie. 1988. <i>Classification of Plants & Animals from a Groote Eylandt Aboriginal Point of View</i>. Darwin: 
-                                   Australian National University North Australia Research Unit. <a href="http://hdl.handle.net/1885/49320" 
-                                   target="_blank">http://hdl.handle.net/1885/49320</a></li>
-                              <li>Leeding, Velma. 1989. <i>Anindilyakwa Phonology and Morphology</i>. PhD thesis, University of Sydney. 
-                                   <a href="https://ses.library.usyd.edu.au/handle/2123/1558" target="_blank">https://ses.library.usyd.edu.au/handle/2123/1558</a></li>
+
+                              <li>Waddy, Julie. 1988. <a href="http://hdl.handle.net/1885/49320" target="_blank"><i>Classification of Plants & Animals from a Groote Eylandt Aboriginal 
+                                   Point of View</i></a>. Darwin: Australian National University North Australia Research Unit. </li>
+
+                              <li>Leeding, Velma. 1989.  <a href="https://ses.library.usyd.edu.au/handle/2123/1558" target="_blank"><i>Anindilyakwa Phonology and Morphology</i></a>. PhD thesis, 
+                                   University of Sydney. </li>
+
                               <li>Leeding, Velma. 1996. Body Parts and Possession in Anindilyakwa. In Hilary Chappell & William McGregor (eds.) 
                                    <i>The Grammar of Inalienability. A Typological Perspective on Body Part Terms and the Part-Whole Relation</i> (pp. 193–250). 
                                    De Gruyter.</li>
-                              <li>van Egmond, Marie-Elaine. 2012. <i>Enindhilyakwa phonology, morphosyntax and genetic position</i>. PhD thesis, University of Sydney. 
-                                   <a href="https://ses.library.usyd.edu.au/handle/2123/8747" target="_blank">https://ses.library.usyd.edu.au/handle/2123/8747</a></li>
-                              <li>Rademaker, Laura. 2014. <i>Language and the mission: Talking and translating on Groote Eylandt 1943-1973</i>. PhD thesis, 
-                                   Australian National University. http://hdl.handle.net/1885/109309</li>	
+
+                              <li>van Egmond, Marie-Elaine. 2012. <a href="https://ses.library.usyd.edu.au/handle/2123/8747" target="_blank"><i>Enindhilyakwa phonology, morphosyntax and genetic 
+                                   position</i></a>. PhD thesis, University of Sydney.</li>
+
+                              <li>Rademaker, Laura. 2014. <a href="http://hdl.handle.net/1885/109309" target="_blank"><i>Language and the mission: Talking and translating on Groote Eylandt 
+                                   1943-1973</i></a>. PhD thesis, Australian National University. </li>
+
                               <li>Rademaker, Laura. 2018. <i>Found in Translation: Many Meanings on a North Australian Mission.</i> Hawaii: University of 
-                                   Hawaii Press.</li>		
-                              <li>Bednall, James. 2020. <i>Temporal, aspectual and modal expression in Anindilyakwa, the language of the Groote Eylandt archipelago, 
-                                   Australia</i>. PhD thesis, Australian National University & Université de Paris. 
-                                   <a href="http://hdl.handle/net/1885/167214" target="_blank">http://hdl.handle/net/1885/167214</a></li>		
+                                   Hawaii Press.</li>
+
+                              <li>Bednall, James. 2020. <a href="http://hdl.handle/net/1885/167214" target="_blank"><i>Temporal, aspectual and modal expression in Anindilyakwa, the language 
+                                   of the Groote Eylandt archipelago, Australia</i></a>. PhD thesis, Australian National University & Université de Paris. </li>
+
                               <li>Bednall, James. ACCEPTED. Feeling through your chest: Body-based tropes for emotion in Anindilyakwa. 
-                                   <i>Pragmatics and Cognition.</i></li>		
+                                   <i>Pragmatics and Cognition.</i></li>
+
                               <li>Bednall, James. IN PRESS. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A McGrath, J. 
                                    Troy & L. Rademaker (eds.) <i>Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia</i>. Lincoln: 
                                    University of Nebraska Press.</li>		
@@ -147,11 +160,14 @@
 
                          <h3>Archived language collections are available at:</h3>
                          <ul>
-                              <li>Bednall, James (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. Digital collection managed by 
-                                   PARADISEC. [OpenAccess] <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">http://catalog.paradisec.org.au/collections/JRB1</a></li>
-                              <li>Stokes, Judith & Julie Waddy (collectors) Digital collection managed by AIATSIS. <a href="https://aiatsis.gov.au/collections/searchcollection" target="_blank">https://aiatsis.gov.au/collections/searchcollection</a></li>
-                              <li>van Egmond, Marie-Elaine (collector) Digital collection managed by Endangered Languages Archive (ELAR). 
-                                   <a href="http://elar.soas.ac.uk/deposit/0144" target="_blank">http://elar.soas.ac.uk/deposit/0144</a></li>
+                              <li>Bednall, James (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
+                                    collection</a> managed by PARADISEC. [OpenAccess]</li>
+
+                              <li>Stokes, Judith & Julie Waddy (collectors) <a href="https://aiatsis.gov.au/collections/searchcollection" target="_blank">Digital collection</a> managed 
+                                   by AIATSIS.</li>
+
+                              <li>van Egmond, Marie-Elaine (collector) <a href="http://elar.soas.ac.uk/deposit/0144" target="_blank">Digital collection</a> managed by Endangered Languages 
+                                   Archive (ELAR).</li>
                          </ul>
 
                          <h3>Audio and video language resources are available at:</h3>
