--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -161,13 +161,13 @@
                               <li>Rademaker, Laura. 2018. <i>Found in Translation: Many Meanings on a North Australian Mission.</i> Hawaii: University of 
                                    Hawaii Press.</li>
 
-                              <li>Bednall, James. 2020. <a href="http://hdl.handle/net/1885/167214" target="_blank"><i>Temporal, aspectual and modal expression in Anindilyakwa, the language 
+                              <li><strong>Bednall, James</strong>. 2020. <a href="http://hdl.handle/net/1885/167214" target="_blank"><i>Temporal, aspectual and modal expression in Anindilyakwa, the language 
                                    of the Groote Eylandt archipelago, Australia</i></a>. PhD thesis, Australian National University & Université de Paris. </li>
 
-                              <li>Bednall, James. ACCEPTED. Feeling through your chest: Body-based tropes for emotion in Anindilyakwa. 
+                              <li><strong>Bednall, James</strong>. ACCEPTED. Feeling through your chest: Body-based tropes for emotion in Anindilyakwa. 
                                    <i>Pragmatics and Cognition.</i></li>
 
-                              <li>Bednall, James. IN PRESS. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A McGrath, J. 
+                              <li><strong>Bednall, James</strong>. IN PRESS. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A McGrath, J. 
                                    Troy & L. Rademaker (eds.) <i>Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia</i>. Lincoln: 
                                    University of Nebraska Press.</li>		
                          </ul>
@@ -175,7 +175,7 @@
 
                          <h3>Archived language collections are available at:</h3>
                          <ul>
-                              <li>Bednall, James (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
+                              <li><strong>Bednall, James</strong> (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
                                     collection</a> managed by PARADISEC. [OpenAccess]</li>
 
                               <li>Stokes, Judith & Julie Waddy (collectors) <a href="https://aiatsis.gov.au/collections/searchcollection" target="_blank">Digital collection</a> managed 
