--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     -->
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="team" content="">
+     <meta name="description" content="linguist, linguistics, Australian languages, Aboriginal languages, Anindilyakwa, Badimaya, Badimia, semantics, pragmatics, morphosyntax, fieldwork, language documentation, language revitalisation, language maintenance, lexicography, community language planning">
+     <meta name="keywords" content="linguist, linguistics, Australian languages, Aboriginal languages, Anindilyakwa, Badimaya, Badimia, semantics, pragmatics, morphosyntax, fieldwork, language documentation, language revitalisation, language maintenance, lexicography, community language planning">
+     <meta name="team" content="James Bednall">
+     <meta name="author" content="James Bednall">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -248,7 +249,7 @@
 
                              <div class="pricing-bottom">
                               
-                                   <a href="#" class="section-btn pricing-btn">Badimaya</a>
+                                   <a href="/badimaya.html" class="section-btn pricing-btn">Badimaya</a>
                              </div>
                          </div>
                     </div>
