--- a/anindilyakwa.html
+++ b/anindilyakwa.html
@@ -161,26 +161,26 @@
                               <li>Rademaker, Laura. 2018. <i>Found in Translation: Many Meanings on a North Australian Mission.</i> Hawaii: University of 
                                    Hawaii Press.</li>
 
-                              <li><strong>Bednall, James</strong>. 2020. <a href="http://hdl.handle/net/1885/167214" target="_blank"><i>Temporal, aspectual and modal expression in Anindilyakwa, the language 
+                              <li>Bednall, James. 2020. <a href="http://hdl.handle/net/1885/167214" target="_blank"><i>Temporal, aspectual and modal expression in Anindilyakwa, the language 
                                    of the Groote Eylandt archipelago, Australia</i></a>. PhD thesis, Australian National University & Université de Paris. </li>
 
-                            <li><strong>Bednall, James</strong>. 2020. <a href="https://www.jbe-platform.com/content/journals/10.1075/pc.00013.bed" target="_blank">Feeling through your 
+                            <li>Bednall, James. 2020. <a href="https://www.jbe-platform.com/content/journals/10.1075/pc.00013.bed" target="_blank">Feeling through your 
                               chest: Body-based tropes for emotion in Anindilyakwa</a>. <i>Pragmatics and Cognition 27(1), 139-183.</i></li>	
 
                               <li>van Egmond, Marie-Elaine and Brett Baker. 2020. <a href="https://www.tandfonline.com/doi/abs/10.1080/07268602.2020.1848796" target="_blank">The genetic 
-                                   position of Anindilyakwa</a>. Australian Journal of Linguistics 40(4), 492-527.</li>
+                                   position of Anindilyakwa</a>. <i>Australian Journal of Linguistics</i> 40(4), 492-527.</li>
 
-                              <li><strong>Bednall, James</strong>. 2021. <a href="https://www.mdpi.com/2226-471X/6/4/164" target="_blank">Identifying salient Aktionsart properties in 
+                              <li>Bednall, James. 2021. <a href="https://www.mdpi.com/2226-471X/6/4/164" target="_blank">Identifying salient Aktionsart properties in 
                                    Anindilyakwa.</a> <i>Languages</i> 6(4), 164. <a href="https://www.mdpi.com/2226-471X/6/4/164/pdf" target="_blank">Download PDF.</a></li>
 
-                              <li><strong>Bednall, James</strong>. in press. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A. McGrath, J. Troy & L. Rademaker (eds.) 
+                              <li>Bednall, James. in press. ‘Yirriyengburnama-langwa mamawura-langwa: Talking about time in Anindilyakwa’ in A. McGrath, J. Troy & L. Rademaker (eds.) 
                                    <i>Everywhen: Conceiving, Knowing, and Narrating the Past of Indigenous Australia.</i> Lincoln: University of Nebraska Press. 26 pages. [expected 2022].</li>
                          </ul>
                          <br>
 
                          <h3>Archived language collections are available at:</h3>
                          <ul>
-                              <li><strong>Bednall, James</strong> (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
+                              <li>Bednall, James (collector) <i>Anindilyakwa language documentation.</i> [JRB1]. <a href="http://catalog.paradisec.org.au/collections/JRB1" target="_blank">Digital
                                     collection</a> managed by PARADISEC. [OpenAccess]</li>
 
                               <li>Stokes, Judith & Julie Waddy (collectors) <a href="https://aiatsis.gov.au/collections/searchcollection" target="_blank">Digital collection</a> managed 
