--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
      <h2>2012-2014 <a href="https://www.abc.net.au/news/2014-04-10/badimaya-dictionary-launched-at-mount-magnet/5380606" target="_blank">‘Badimaya Dictionary’</a></h2>
      <br>
      <p><strong>Project summary</strong>: A print dictionary project, involving substantial community consultation, data collection and consolidation of legacy material, 
-          in order to compile and publish a dictionary of ~1,150 head-words.</p>
+          in order to compile and publish a dictionary of ~1,150 head-words. Second edition published in 2021.</p>
      
      <p><strong>My role</strong>: Linguist/researcher (recorded, transcribed, translated, databased Badimaya and English audio and text) & dictionary compiler; coordinated and 
           oversaw the project to completion</p>
